--- a/public/registro.html
+++ b/public/registro.html
@@ -296,7 +296,7 @@
             "Usulután": ["Usulután", "Alegría", "Berlín", "California", "Concepción Batres", "El Triunfo", "Ereguayquín", "Estanzuelas", "Jiquilisco", "Jucuapa", "Jucuarán", "Mercedes Umaña", "Nueva Granada", "Ozatlán", "Puerto El Triunfo", "San Agustín", "San Buenaventura", "San Dionisio", "San Francisco Javier", "Santa Elena", "Santa María", "Santiago de María", "Tecapán"]
         };
 
-        // Configuración de Firebase (se reemplazarán en CI/CD)
+        // Configuración de Firebase
         const firebaseConfig = {
             apiKey: "AIzaSyCR-axayENUg4FFb4jj0uVW2BnfwQ5EiXY",
             authDomain: "mitienda-c2609.firebaseapp.com",
@@ -307,7 +307,7 @@
         };
 
         // Inicializa Firebase
-        firebase.initializeApp(firebaseConfig);
+        const app = firebase.initializeApp(firebaseConfig);
         const auth = firebase.auth();
         const db = firebase.firestore();
 
