--- a/public/perfil.html
+++ b/public/perfil.html
@@ -283,6 +283,70 @@
       margin-top: 10px;
     }
 
+    /* Estilos para el footer */
+    footer {
+      background-color: #2c3e50;
+      color: white;
+      padding: 40px 0 20px;
+      margin-top: 50px;
+    }
+
+    footer .container {
+      max-width: 1200px;
+      margin: 0 auto;
+      padding: 0 20px;
+    }
+
+    .footer-content {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      gap: 40px;
+      margin-bottom: 30px;
+    }
+
+    .footer-logo img {
+      max-width: 150px;
+      height: auto;
+      margin-bottom: 15px;
+    }
+
+    .footer-logo p {
+      color: #bdc3c7;
+      line-height: 1.6;
+    }
+
+    .footer-links h3 {
+      color: white;
+      margin-bottom: 20px;
+      font-size: 1.2rem;
+    }
+
+    .footer-links ul {
+      list-style: none;
+    }
+
+    .footer-links li {
+      margin-bottom: 10px;
+    }
+
+    .footer-links a {
+      color: #bdc3c7;
+      text-decoration: none;
+      transition: color 0.3s ease;
+    }
+
+    .footer-links a:hover {
+      color: #3498db;
+    }
+
+    .copyright {
+      text-align: center;
+      padding-top: 20px;
+      border-top: 1px solid #34495e;
+      color: #bdc3c7;
+      font-size: 0.9rem;
+    }
+
     @media (max-width: 992px) {
       .profile-container {
         grid-template-columns: 1fr;
@@ -290,6 +354,16 @@
       
       .info-grid {
         grid-template-columns: 1fr;
+      }
+    }
+
+    @media (max-width: 768px) {
+      .footer-content {
+        grid-template-columns: 1fr;
+      }
+      
+      .footer-logo, .footer-links {
+        text-align: center;
       }
     }
 
