--- a/public/productos.html
+++ b/public/productos.html
@@ -11,7 +11,7 @@
   <header class="header">
     <div class="container header-container">
       <div class="logo">
-        <a href="index.html"><img src="img/logo.png" alt="TecnoExpress"></a>
+        <a href="index.html"><img src="assets/imagenes/logo.png" alt="TecnoExpress"></a>
       </div>
       <nav>
         <ul class="nav-list">
