--- a/public/productos.html
+++ b/public/productos.html
@@ -43,7 +43,7 @@
       <div class="productos-grid">
         <div class="producto-card">
           <div class="producto-imagen">
-            <img src="img/impresora1.webp" alt="Impresora Térmica EPSON">
+            <img src="assets/imagenes/impresora1.webp" alt="Impresora Térmica EPSON">
           </div>
           <div class="producto-info">
             <h3>Impresora EPSON TM-T20III</h3>
@@ -53,7 +53,7 @@
                     data-id="prod001"
                     data-name="Impresora EPSON TM-T20III"
                     data-price="150.00"
-                    data-image="img/impresora1.webp">
+                    data-image="assets/imagenes/impresora1.webp">
               <i class="fas fa-cart-plus"></i> Añadir al carrito
             </button>
           </div>
@@ -61,7 +61,7 @@
         
         <div class="producto-card">
           <div class="producto-imagen">
-            <img src="img/impresora2.webp" alt="Impresora Térmica EPSON">
+            <img src="assets/imagenes/impresora2.webp" alt="Impresora Térmica EPSON">
           </div>
           <div class="producto-info">
             <h3>Impresora EPSON TM-T88III</h3>
@@ -71,7 +71,7 @@
                     data-id="prod002"
                     data-name="Impresora EPSON TM-T88III"
                     data-price="80.00"
-                    data-image="img/impresora2.webp">
+                    data-image="assets/imagenes/impresora2.webp">
               <i class="fas fa-cart-plus"></i> Añadir al carrito
             </button>
           </div>
@@ -80,7 +80,7 @@
         <!-- Producto adicional de ejemplo -->
         <div class="producto-card">
           <div class="producto-imagen">
-            <img src="img/impresora3.webp" alt="Impresora Térmica EPSON">
+            <img src="assets/imagenes/impresora3.webp" alt="Impresora Térmica EPSON">
           </div>
           <div class="producto-info">
             <h3>Impresora EPSON TM-U220</h3>
@@ -90,7 +90,7 @@
                     data-id="prod003"
                     data-name="Impresora EPSON TM-U220"
                     data-price="120.00"
-                    data-image="img/impresora3.webp">
+                    data-image="assets/imagenes/impresora3.webp">
               <i class="fas fa-cart-plus"></i> Añadir al carrito
             </button>
           </div>
@@ -99,7 +99,7 @@
         <!-- Producto adicional de ejemplo -->
         <div class="producto-card">
           <div class="producto-imagen">
-            <img src="img/impresora4.webp" alt="Impresora Térmica EPSON">
+            <img src="assets/imagenes/impresora4.webp" alt="Impresora Térmica EPSON">
           </div>
           <div class="producto-info">
             <h3>Impresora EPSON TM-m30II</h3>
@@ -109,7 +109,7 @@
                     data-id="prod004"
                     data-name="Impresora EPSON TM-m30II"
                     data-price="200.00"
-                    data-image="img/impresora4.webp">
+                    data-image="assets/imagenes/impresora4.webp">
               <i class="fas fa-cart-plus"></i> Añadir al carrito
             </button>
           </div>
@@ -180,7 +180,7 @@
     <div class="container">
       <div class="footer-content">
         <div class="footer-logo">
-          <img src="img/logo.png" alt="TecnoExpress">
+          <img src="assets/imagenes/logo.png" alt="TecnoExpress">
           <p>Soluciones tecnológicas innovadoras para el mundo moderno.</p>
         </div>
         <div class="footer-links">
