--- a/public/index.html
+++ b/public/index.html
@@ -575,7 +575,7 @@
     <div class="container header-container">
       <div class="logo">
         <a href="#">
-          <img src="img/logo.png" alt="TecnoExpress">
+          <img src="assets/imagenes/logo.png" alt="TecnoExpress">
         </a>
       </div>
       <nav>
@@ -599,7 +599,7 @@
 
   <section class="hero">
     <video autoplay muted loop playsinline class="hero-video">
-      <source src="img/hero.mp4" type="video/mp4">
+      <source src="assets/imagenes/hero.mp4" type="video/mp4">
       <img src="img/hero-fallback.jpg" alt="Fondo tecnológico">
     </video>
     
@@ -614,10 +614,10 @@
     <div class="banner-column">
       <div class="slider-container">
         <div class="slide active">
-          <img src="img/banner1.webp" alt="Ofertas especiales en tecnología" class="slide-img">
+          <img src="assets/imagenes/banner1.webp" alt="Ofertas especiales en tecnología" class="slide-img">
         </div>
         <div class="slide">
-          <img src="img/banner2.webp" alt="Últimos dispositivos tecnológicos" class="slide-img">
+          <img src="assets/imagenes/banner2.webp" alt="Últimos dispositivos tecnológicos" class="slide-img">
         </div>
       </div>
     </div>
@@ -694,7 +694,7 @@
     <div class="container">
       <div class="footer-content">
         <div class="footer-logo">
-          <img src="img/logo.png" alt="TecnoExpress">
+          <img src="assets/imagenes/logo.png" alt="TecnoExpress">
           <p>Soluciones tecnológicas innovadoras para el mundo moderno.</p>
         </div>
         <div class="footer-links">
