--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
 
     /* Header con nuevo color */
     header {
-      background-color: #1a365d; /* Azul más oscuro para mejor contraste */
+      background-color: #1a365d;
       padding: 15px 0;
       position: sticky;
       top: 0;
@@ -72,10 +72,35 @@
     }
 
     nav ul li a:hover {
-      color: #ffcc00; /* Amarillo para hover */
+      color: #ffcc00;
     }
 
     nav ul li a i {
+      font-size: 0.9rem;
+    }
+
+    /* Auth Section */
+    .auth-section {
+      display: flex;
+      align-items: center;
+      gap: 15px;
+    }
+
+    #user-info {
+      display: flex;
+      align-items: center;
+      gap: 15px;
+    }
+
+    #user-avatar {
+      width: 32px;
+      height: 32px;
+      border-radius: 50%;
+      object-fit: cover;
+    }
+
+    .btn-small {
+      padding: 8px 16px;
       font-size: 0.9rem;
     }
 
@@ -485,6 +510,124 @@
       box-shadow: 0 5px 15px rgba(0,0,0,0.1);
     }
 
+    .btn-google {
+      background-color: #db4437;
+      color: white;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 10px;
+      width: 100%;
+      margin: 10px 0;
+    }
+
+    .btn-google:hover {
+      background-color: #c23321;
+    }
+
+    /* Modales */
+    .modal-overlay {
+      position: fixed;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background-color: rgba(0,0,0,0.5);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      z-index: 2000;
+      opacity: 0;
+      visibility: hidden;
+      transition: all 0.3s ease;
+    }
+
+    .modal-overlay.active {
+      opacity: 1;
+      visibility: visible;
+    }
+
+    .login-modal {
+      background-color: white;
+      border-radius: 10px;
+      width: 100%;
+      max-width: 400px;
+      padding: 30px;
+      box-shadow: 0 5px 20px rgba(0,0,0,0.2);
+    }
+
+    .modal-header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin-bottom: 20px;
+    }
+
+    .modal-header h2 {
+      color: #2c3e50;
+      font-size: 1.8rem;
+    }
+
+    .close-modal {
+      background: none;
+      border: none;
+      font-size: 1.5rem;
+      cursor: pointer;
+      color: #7f8c8d;
+    }
+
+    .login-form .form-group {
+      margin-bottom: 20px;
+    }
+
+    .login-form label {
+      display: block;
+      margin-bottom: 8px;
+      color: #2c3e50;
+      font-weight: 500;
+    }
+
+    .login-form input {
+      width: 100%;
+      padding: 12px 15px;
+      border: 1px solid #ddd;
+      border-radius: 5px;
+      font-size: 1rem;
+    }
+
+    .forgot-password {
+      display: block;
+      text-align: right;
+      margin-top: 8px;
+      color: #3498db;
+      font-size: 0.9rem;
+      text-decoration: none;
+    }
+
+    .btn-login {
+      width: 100%;
+      padding: 12px;
+      background-color: #3498db;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      font-size: 1rem;
+      cursor: pointer;
+      margin-top: 10px;
+    }
+
+    .form-footer {
+      text-align: center;
+      margin-top: 20px;
+      color: #7f8c8d;
+    }
+
+    .register-link {
+      color: #3498db;
+      text-decoration: none;
+      font-weight: 500;
+    }
+
     /* Responsive */
     @media (max-width: 992px) {
       .hero h1 {
@@ -567,6 +710,11 @@
       .services-grid {
         grid-template-columns: 1fr;
       }
+
+      .login-modal {
+        padding: 20px;
+        margin: 0 15px;
+      }
     }
   </style>
 </head>
@@ -588,10 +736,12 @@
       <div class="auth-section">
         <div id="guest-buttons">
           <button id="open-login-btn" class="btn btn-small">Iniciar Sesión</button>
+          <button id="open-register-btn" class="btn btn-small">Registrarse</button>
         </div>
         <div id="user-info" style="display:none;">
+          <img id="user-avatar" src="" alt="Avatar" class="hidden">
           <span id="user-email"></span>
-          <button id="logout-btn" class="btn btn-small btn-outline">Cerrar Sesión</button>
+          <button id="logout-btn" class="btn btn-small">Cerrar Sesión</button>
         </div>
       </div>
     </div>
@@ -713,42 +863,116 @@
   </footer>
 
   <!-- Modal de Login -->
-<div id="login-modal" class="modal-overlay">
-  <div class="login-modal" role="dialog" aria-modal="true" aria-labelledby="login-modal-title">
-    <div class="modal-header">
-      <h2 id="login-modal-title">Iniciar Sesión</h2>
-      <button class="close-modal" aria-label="Cerrar modal de inicio de sesión">&times;</button>
+  <div id="login-modal" class="modal-overlay">
+    <div class="login-modal" role="dialog" aria-modal="true" aria-labelledby="login-modal-title">
+      <div class="modal-header">
+        <h2 id="login-modal-title">Iniciar Sesión</h2>
+        <button class="close-modal" aria-label="Cerrar modal de inicio de sesión">&times;</button>
+      </div>
+      <form id="login-form" class="login-form">
+        <div class="form-group">
+          <label for="login-email">Correo Electrónico</label>
+          <input 
+            type="email" 
+            id="login-email" 
+            required
+            autocomplete="email"
+            placeholder="tucorreo@ejemplo.com"
+          >
+        </div>
+        <div class="form-group">
+          <label for="login-password">Contraseña</label>
+          <input 
+            type="password" 
+            id="login-password" 
+            required
+            autocomplete="current-password"
+            placeholder="••••••••"
+            minlength="8"
+          >
+          <a href="#" class="forgot-password">¿Olvidaste tu contraseña?</a>
+        </div>
+        <button type="submit" class="btn btn-login">Ingresar</button>
+        <button type="button" id="google-login-btn" class="btn btn-google">
+          <i class="fab fa-google"></i> Continuar con Google
+        </button>
+        <div class="form-footer">
+          <p>¿No tienes cuenta? <a href="#" id="switch-to-signup" class="register-link">Regístrate aquí</a></p>
+        </div>
+      </form>
     </div>
-    <form id="login-form" class="login-form">
-      <div class="form-group">
-        <label for="login-email">Correo Electrónico</label>
-        <input 
-          type="email" 
-          id="login-email" 
-          required
-          autocomplete="email"
-          placeholder="tucorreo@ejemplo.com"
-        >
-      </div>
-      <div class="form-group">
-        <label for="login-password">Contraseña</label>
-        <input 
-          type="password" 
-          id="login-password" 
-          required
-          autocomplete="current-password"
-          placeholder="••••••••"
-          minlength="8"
-        >
-        <a href="#" class="forgot-password">¿Olvidaste tu contraseña?</a>
-      </div>
-      <button type="submit" class="btn-login">Ingresar</button>
-      <div class="form-footer">
-        <p>¿No tienes cuenta? <a href="registro.html" id="switch-to-signup" class="register-link">Regístrate aquí</a></p>
-      </div>
-    </form>
   </div>
-</div>
+
+  <!-- Modal de Registro -->
+  <div id="register-modal" class="modal-overlay">
+    <div class="login-modal" role="dialog" aria-modal="true" aria-labelledby="register-modal-title">
+      <div class="modal-header">
+        <h2 id="register-modal-title">Registrarse</h2>
+        <button class="close-modal" aria-label="Cerrar modal de registro">&times;</button>
+      </div>
+      <form id="register-form" class="login-form">
+        <div class="form-group">
+          <label for="register-name">Nombre Completo</label>
+          <input 
+            type="text" 
+            id="register-name" 
+            name="name"
+            required
+            placeholder="Tu nombre completo"
+          >
+        </div>
+        <div class="form-group">
+          <label for="register-email">Correo Electrónico</label>
+          <input 
+            type="email" 
+            id="register-email" 
+            name="email"
+            required
+            autocomplete="email"
+            placeholder="tucorreo@ejemplo.com"
+          >
+        </div>
+        <div class="form-group">
+          <label for="register-phone">Teléfono</label>
+          <input 
+            type="tel" 
+            id="register-phone" 
+            name="phone"
+            placeholder="Número de teléfono"
+          >
+        </div>
+        <div class="form-group">
+          <label for="register-password">Contraseña</label>
+          <input 
+            type="password" 
+            id="register-password" 
+            name="password"
+            required
+            autocomplete="new-password"
+            placeholder="••••••••"
+            minlength="8"
+          >
+        </div>
+        <div class="form-group">
+          <label for="register-confirm-password">Confirmar Contraseña</label>
+          <input 
+            type="password" 
+            id="register-confirm-password" 
+            name="confirmPassword"
+            required
+            autocomplete="new-password"
+            placeholder="••••••••"
+            minlength="8"
+          >
+        </div>
+        <button type="submit" class="btn btn-login">Registrarse</button>
+        <div class="form-footer">
+          <p>¿Ya tienes cuenta? <a href="#" id="switch-to-login" class="register-link">Inicia sesión aquí</a></p>
+        </div>
+      </form>
+    </div>
+  </div>
+
   <!-- Scripts -->
   <script>
     // Carrusel automático
@@ -786,6 +1010,7 @@
   <!-- Firebase y scripts de autenticación -->
   <script type="module" src="/js/firebase-config.js"></script>
   <script type="module" src="/js/auth.js"></script>
+  <script type="module" src="/js/auth-ui.js"></script>
   <script type="module" src="/js/main.js"></script>
 </body>
 </html>
