--- a/public/index.html
+++ b/public/index.html
@@ -1008,9 +1008,9 @@
   </script>
 
   <!-- Firebase y scripts de autenticación -->
-  <script type="module" src="/js/firebase-config.js"></script>
-  <script type="module" src="/js/auth.js"></script>
-  <script type="module" src="/js/auth-ui.js"></script>
-  <script type="module" src="/js/main.js"></script>
+  <script type="module" src="src/firebase-config.js"></script>
+  <script type="module" src="src/auth/auth.js"></script>
+  <script type="module" src="src/auth/auth-ui.js"></script>
+  <script type="module" src="src/main.js"></script>
 </body>
 </html>
