--- a/public/index.html
+++ b/public/index.html
@@ -1008,9 +1008,9 @@
   </script>
 
   <!-- Firebase y scripts de autenticación -->
-  <script type="module" src="/firebase-config.js"></script>
-  <script type="module" src="/auth/auth.js"></script>
-  <script type="module" src="/auth/auth-ui.js"></script>
-  <script type="module" src="/main.js"></script>
+  <script type="module" src="firebase-config.js"></script>
+  <script type="module" src="auth/auth.js"></script>
+  <script type="module" src="auth/auth-ui.js"></script>
+  <script type="module" src="main.js"></script>
 </body>
 </html>
