--- a/public/index.html
+++ b/public/index.html
@@ -466,7 +466,7 @@
     <header>
         <div class="header-container">
             <div class="logo">
-                <img src="https://via.placeholder.com/150x40?text=TecnoExpress" alt="TecnoExpress Logo">
+                <img src="public/assets/imagenes/logo.png" alt="TecnoExpress Logo">
             </div>
             <nav>
                 <ul>
