--- a/public/index.html
+++ b/public/index.html
@@ -466,7 +466,7 @@
     <header>
         <div class="header-container">
             <div class="logo">
-                <img src="public/assets/imagenes/logo.png" alt="TecnoExpress Logo">
+                <img src="/assets/imagenes/logo.png" alt="Mitiendita503">
             </div>
             <nav>
                 <ul>
