--- a/public/index.html
+++ b/public/index.html
@@ -141,7 +141,7 @@
             height: 70vh;
             min-height: 500px;
             background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)), 
-                        url('https://images.unsplash.com/photo-1555529669-e69e7aa0ba9a?ixlib=rb-4.0.3&auto=format&fit=crop&w=1350&q=80');
+                        url('https://images.unsplash.com/photo-1556905055-8f358a7a47b2?ixlib=rb-4.0.3&auto=format&fit=crop&w=1350&q=80');
             background-size: cover;
             background-position: center;
             color: white;
@@ -466,7 +466,7 @@
     <header>
         <div class="header-container">
             <div class="logo">
-                <img src="https://via.placeholder.com/180x60?text=MiTienda503" alt="MiTienda503">
+                <img src="/assets/imagenes/logo.png" alt="MiTienda503">
             </div>
             <nav>
                 <ul>
