--- a/public/index.html
+++ b/public/index.html
@@ -471,7 +471,7 @@
             <nav>
                 <ul>
                     <li><a href="#inicio"><i class="fas fa-home"></i> Inicio</a></li>
-                    <li><a href="#productos"><i class="fas fa-shopping-bag"></i> Productos</a></li>
+                    <li><a href="productos.html"><i class="fas fa-shopping-bag"></i> Productos</a></li>
                     <li><a href="#nosotros"><i class="fas fa-users"></i> Nosotros</a></li>
                     <li><a href="#contacto"><i class="fas fa-envelope"></i> Contacto</a></li>
                 </ul>
