--- a/public/index.html
+++ b/public/index.html
@@ -498,7 +498,7 @@
                 </div>
                 <button type="submit" class="submit-btn">Ingresar</button>
             </form>
-            <p style="text-align: center; margin-top: 1.5rem;">¿No tienes cuenta? <a href="perfil.html" style="color: var(--primary); font-weight: 500;">Regístrate aquí</a></p>
+            <p style="text-align: center; margin-top: 1.5rem;">¿No tienes cuenta? <a href="registro.html" style="color: var(--primary); font-weight: 500;">Regístrate aquí</a></p>
         </div>
     </div>
 
