--- a/public/index.html
+++ b/public/index.html
@@ -429,7 +429,7 @@
             </nav>
             <div class="auth-section">
                 <div id="guest-buttons">
-                    <button class="login-btn btn-auth" id="open-login-btn">
+                    <button id="open-login-btn" class="btn-auth">
                         <i class="fas fa-sign-in-alt"></i> Iniciar Sesión
                     </button>
                 </div>
