--- a/public/index.html
+++ b/public/index.html
@@ -673,7 +673,7 @@
                     <button type="submit" class="submit-btn">Ingresar</button>
                 </form>
                 <div class="form-footer">
-                    <p>¿No tienes cuenta? <a href="#" id="switch-to-signup">Regístrate aquí</a></p>
+                    <p>¿No tienes cuenta? <a href="registro.html" id="switch-to-signup">Regístrate aquí</a></p>
                 </div>
             </div>
         </div>
