--- a/public/index.html
+++ b/public/index.html
@@ -615,8 +615,8 @@
                     <li><a href="#nosotros"><i class="fas fa-users"></i> Nosotros</a></li>
                     <li><a href="#contacto"><i class="fas fa-envelope"></i> Contacto</a></li>
                     <!-- Enlaces solo para usuarios logueados -->
-                    <li id="profile-link" style="display:none;"><a href="#perfil"><i class="fas fa-user"></i> Perfil</a></li>
-                    <li id="orders-link" style="display:none;"><a href="#compras"><i class="fas fa-shopping-cart"></i> Mis Compras</a></li>
+                    <li id="profile-link" style="display:none;"><a href="perfil.html"><i class="fas fa-user"></i> Perfil</a></li>
+                    <li id="orders-link" style="display:none;"><a href="perfil.htmml#compras"><i class="fas fa-shopping-cart"></i> Mis Compras</a></li>
                 </ul>
             </nav>
             <div class="auth-section">
