--- a/public/productos.html
+++ b/public/productos.html
@@ -892,7 +892,7 @@
   <footer class="footer">
     <div class="container">
       <div class="footer-logo">
-        <img src="https://via.placeholder.com/180x60?text=MiTienda503" alt="MiTienda503">
+        <img src="/assets/imagenes/logo.png" alt="MiTienda503">
         <p>Todo lo que necesitas para tu hogar y estilo personal en un solo lugar.</p>
       </div>
       <div class="copyright">
