--- a/public/productos.html
+++ b/public/productos.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Productos - MiTienda503</title>
-      <link rel="stylesheet" href="/assets/css/styles.css">
+  <link rel="stylesheet" href="/assets/css/styles.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <style>
     :root {
@@ -29,13 +29,14 @@
       line-height: 1.6;
       color: #333;
       background-color: var(--gray-light);
+      font-size: 18px;
     }
 
     /* Header */
     .header {
       background-color: var(--secondary);
       color: white;
-      padding: 1rem 2rem;
+      padding: 1.5rem 2rem;
       box-shadow: var(--shadow);
       position: sticky;
       top: 0;
@@ -43,9 +44,9 @@
     }
 
     .container {
-      max-width: 1200px;
+      max-width: 1400px;
       margin: 0 auto;
-      padding: 0 1rem;
+      padding: 0 1.5rem;
     }
 
     .header-container {
@@ -55,13 +56,13 @@
     }
 
     .logo img {
-      height: 60px;
+      height: 70px;
     }
 
     .nav-list {
       display: flex;
       list-style: none;
-      gap: 1.5rem;
+      gap: 2rem;
     }
 
     .nav-link {
@@ -71,6 +72,7 @@
       display: flex;
       align-items: center;
       gap: 0.5rem;
+      font-size: 1.1rem;
     }
 
     .nav-link:hover {
@@ -86,13 +88,14 @@
       background: var(--primary);
       color: white;
       border: none;
-      padding: 0.6rem 1.2rem;
+      padding: 0.8rem 1.5rem;
       border-radius: 2rem;
       cursor: pointer;
       font-weight: 500;
       display: flex;
       align-items: center;
       gap: 0.5rem;
+      font-size: 1.1rem;
     }
 
     .btn:hover {
@@ -103,8 +106,8 @@
       position: relative;
       cursor: pointer;
       color: white;
-      font-size: 3rem;
-      margin-left: 1rem;
+      font-size: 3.5rem;
+      margin-left: 1.5rem;
     }
 
     #cart-count {
@@ -129,20 +132,20 @@
 
     /* Main content */
     main {
-      padding: 3rem 0;
+      padding: 4rem 0;
     }
 
     .section-title {
       text-align: center;
-      margin-bottom: 3rem;
-      font-size: 2.2rem;
+      margin-bottom: 4rem;
+      font-size: 2.5rem;
       color: var(--secondary);
     }
 
     .products-grid {
       display: grid;
-      grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
-      gap: 2rem;
+      grid-template-columns: repeat(3, 1fr);
+      gap: 3rem;
     }
 
     .product-card {
@@ -151,15 +154,16 @@
       overflow: hidden;
       box-shadow: var(--shadow);
       transition: var(--transition);
+      transform: scale(1);
     }
 
     .product-card:hover {
-      transform: translateY(-5px);
+      transform: scale(1.05);
       box-shadow: 0 10px 20px rgba(0,0,0,0.1);
     }
 
     .product-image {
-      height: 200px;
+      height: 280px;
       overflow: hidden;
     }
 
@@ -175,24 +179,30 @@
     }
 
     .product-info {
-      padding: 1.5rem;
+      padding: 2rem;
     }
 
     .product-info h3 {
-      margin-bottom: 0.5rem;
+      margin-bottom: 1rem;
       color: var(--secondary);
+      font-size: 1.5rem;
+    }
+
+    .product-info p {
+      font-size: 1.1rem;
+      margin-bottom: 1.5rem;
     }
 
     .product-price {
-      font-size: 1.3rem;
+      font-size: 1.5rem;
       font-weight: 600;
       color: var(--primary);
-      margin: 1rem 0;
+      margin: 1.5rem 0;
     }
 
     .add-to-cart {
       width: 100%;
-      padding: 0.8rem;
+      padding: 1rem;
       background: var(--primary);
       color: white;
       border: none;
@@ -203,6 +213,7 @@
       align-items: center;
       justify-content: center;
       gap: 0.5rem;
+      font-size: 1.1rem;
     }
 
     .add-to-cart:hover {
@@ -392,19 +403,21 @@
     .footer {
       background: var(--secondary);
       color: white;
-      padding: 3rem 0;
+      padding: 4rem 0;
       text-align: center;
+      font-size: 1.1rem;
     }
 
     .footer-logo img {
-      height: 60px;
-      margin-bottom: 1rem;
+      height: 70px;
+      margin-bottom: 1.5rem;
     }
 
     .copyright {
-      margin-top: 2rem;
-      padding-top: 1.5rem;
+      margin-top: 3rem;
+      padding-top: 2rem;
       border-top: 1px solid rgba(255,255,255,0.1);
+      font-size: 1.1rem;
     }
 
     /* Estilos para autenticación */
@@ -641,18 +654,24 @@
       to { transform: translateY(0); opacity: 1; }
     }
 
+    @media (max-width: 1200px) {
+      .products-grid {
+        grid-template-columns: repeat(2, 1fr);
+      }
+    }
+
     @media (max-width: 768px) {
+      .products-grid {
+        grid-template-columns: 1fr;
+      }
+      
       .nav-list {
         display: none;
       }
       
-      .cart-modal {
-        width: 90%;
-      }
-
       .header-container {
         flex-wrap: wrap;
-        gap: 1rem;
+        gap: 1.5rem;
       }
 
       .auth-section {
